Closed
Bug 572599
Opened 15 years ago
Closed 15 years ago
content/xbl/crashtests/336960-1.html crashes sometimes with bug 130078
Categories
(Core :: Web Painting, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: tnikkel, Assigned: tnikkel)
References
Details
Attachments
(1 file)
|
1.04 KB,
patch
|
roc
:
review+
|
Details | Diff | Splinter Review |
content/xbl/crashtests/336960-1.html crashes sometimes with bug 130078 on Linux (perhaps elsewhere too). We get a mouse move over a popup widget (even though it has 0 width and height), PresShell::HandleEvent calls nsLayoutUtils::GetEventCoordinatesRelativeTo. It gets the view for the root frame of the root document. And for some reason when we crash that view does not have a widget and we crash. The views and frame trees look okay.
| Assignee | ||
Comment 1•15 years ago
|
||
The problem is actually one test before: content/xbl/crashtests/336744-1.html
It opens up a popup, and then after the view gets unlinked there is an OS generated mouse leave events for the popup widget. We try to get the coordinates of that event relative to the widget of the root document root frame. The root document root frame is the root frame of the content document because its view was disconnected. It doesn't have a widget, and we crash because we assume it does.
| Assignee | ||
Comment 2•15 years ago
|
||
Assignee: nobody → tnikkel
Attachment #466228 -
Flags: review?(roc)
Attachment #466228 -
Flags: review?(roc) → review+
| Assignee | ||
Comment 3•15 years ago
|
||
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Updated•7 years ago
|
Component: Layout: View Rendering → Layout: Web Painting
You need to log in
before you can comment on or make changes to this bug.
Description
•