Bug 572599. If we get an event on a child widget that is in a disconnected view subtree the view subtree might not have a root widget. r=roc